--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/JavaScript/PlayDoc/first.html"></a>
+    <a href="/JavaScript/PlayDoc/first.html">Profile card</a>
 </body>
 </html>
